Fix login icon placement on IE10

--- a/app/styles/modal/auth-modal.sass
+++ b/app/styles/modal/auth-modal.sass
@@ -280,6 +280,7 @@ html.no-borderimage #auth-modal
       background-image: url(/images/level/code_toolbar_submit_button_zazz_pressed.png)
       padding: 9px 8px 8px 12px
       border: 0
-
-
-
+      
+.ie10 #auth-modal .auth-network-logins .btn.btn-lg.network-login .network-logo
+  left: 15px
+  top: 15px  
